--- a/index.html
+++ b/index.html
@@ -76,6 +76,21 @@
         <a href="https://www.apple.com/iphone-14-pro/">iphone 14 pro (max)</a>
         <br />
       </p>
+      <p>
+        <b>phone screen protector</b><br />
+        <a href="https://www.whitestonedome.com/">whitestone dome</a>
+        <br />
+      </p>
+      <p>
+        <b>face moisturizer</b><br />
+        <a href="https://www.cerave.com/skincare/moisturizers/am-facial-moisturizing-lotion-with-sunscreen">cerave facial moisturizing lotion am/pm</a>
+        <br />
+      </p>
+      <p>
+        <b>cast iron pot</b><br />
+        <a href="https://www.lecreuset.se/sv_SE/p/rund-gryta-classic-gjutjarn/CI5001.html?dwvar_CI5001_color=ocean&dwvar_CI5001_size=26cm-l5-3">le creuset signature 5.3l</a>
+        <br />
+      </p>
     </div>
   </div>
 </body>
