--- a/index.html
+++ b/index.html
@@ -83,7 +83,9 @@
       </p>
       <p>
         <b>face moisturizer</b><br />
-        <a href="https://www.cerave.com/skincare/moisturizers/am-facial-moisturizing-lotion-with-sunscreen">cerave facial moisturizing lotion am/pm</a>
+        <a href="https://www.cerave.com/skincare/moisturizers/am-facial-moisturizing-lotion-with-sunscreen">cerave facial moisturizing lotion am</a>
+        <br />
+        <a href="https://www.cerave.com/skincare/moisturizers/pm-facial-moisturizing-lotion">cerave facial moisturizing lotion pm</a>
         <br />
       </p>
       <p>
