--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       </p>
       <p>
         <b>phone</b><br />
-        <a href="https://www.apple.com/macbook-pro-14-and-16/">google pixel 7 pro</a>
+        <a href="https://store.google.com/us/product/pixel_7_pro?hl=en-US">google pixel 7 pro</a>
         <br />
         <a href="https://www.apple.com/iphone-14-pro/">iphone 14 pro (max)</a>
         <br />
