--- a/index.html
+++ b/index.html
@@ -91,6 +91,11 @@
         <a href="https://www.lecreuset.se/sv_SE/p/rund-gryta-classic-gjutjarn/CI5001.html?dwvar_CI5001_color=ocean&dwvar_CI5001_size=26cm-l5-3">le creuset signature 5.3l</a>
         <br />
       </p>
+      <p>
+        <b>meat thermometer</b><br />
+        <a href="https://www.thermoworks.com/thermapen-one/">thermapen one</a>
+        <br />
+      </p>
     </div>
   </div>
 </body>
