--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <b>true wireless earbuds</b><br />
         <a href="https://www.samsung.com/global/galaxy/galaxy-buds2-pro/">samsung buds 2 pro</a>
         <br />
-        <a href="https://www.apple.com/se/airpods-pro/">apple airpods 2 pro</a>
+        <a href="https://www.apple.com/se/airpods-pro/">apple airpods pro</a>
       </p>
       <p>
         <b>mechanical keyboard</b><br />
