--- a/index.html
+++ b/index.html
@@ -96,6 +96,11 @@
         <a href="https://www.thermoworks.com/thermapen-one/">thermapen one</a>
         <br />
       </p>
+      <p>
+        <b>lip balm</b><br />
+        <a href="https://www.paulaschoice.com/lip-and-body-treatment-balm/550.html">paula's choice lip and body treatment balm</a>
+        <br />
+      </p>
     </div>
   </div>
 </body>
