--- a/index.html
+++ b/index.html
@@ -81,14 +81,18 @@
       </p>
       <p>
         <b>face moisturizer</b><br />
-        <a href="https://www.cerave.com/skincare/moisturizers/am-facial-moisturizing-lotion-with-sunscreen">cerave facial moisturizing lotion am</a>
+        <a href="https://www.cerave.com/skincare/moisturizers/am-facial-moisturizing-lotion-with-sunscreen">cerave
+          facial moisturizing lotion am</a>
         <br />
-        <a href="https://www.cerave.com/skincare/moisturizers/pm-facial-moisturizing-lotion">cerave facial moisturizing lotion pm</a>
+        <a href="https://www.cerave.com/skincare/moisturizers/pm-facial-moisturizing-lotion">cerave facial moisturizing
+          lotion pm</a>
         <br />
       </p>
       <p>
         <b>cast iron pot</b><br />
-        <a href="https://www.lecreuset.se/sv_SE/p/rund-gryta-classic-gjutjarn/CI5001.html?dwvar_CI5001_color=ocean&dwvar_CI5001_size=26cm-l5-3">le creuset signature 5.3l</a>
+        <a
+          href="https://www.lecreuset.se/sv_SE/p/rund-gryta-classic-gjutjarn/CI5001.html?dwvar_CI5001_color=ocean&dwvar_CI5001_size=26cm-l5-3">le
+          creuset signature 5.3l</a>
         <br />
       </p>
       <p>
@@ -98,7 +102,13 @@
       </p>
       <p>
         <b>lip balm</b><br />
-        <a href="https://www.paulaschoice.com/lip-and-body-treatment-balm/550.html">paula's choice lip and body treatment balm</a>
+        <a href="https://www.paulaschoice.com/lip-and-body-treatment-balm/550.html">paula's choice lip and body
+          treatment balm</a>
+        <br />
+      </p>
+      <p>
+        <b>towels</b><br />
+        <a href="https://singular-society.com/products/hand-towel-50x70?variant=32887944118295">singular society towels</a>
         <br />
       </p>
     </div>
