--- a/index.html
+++ b/index.html
@@ -108,8 +108,32 @@
       </p>
       <p>
         <b>towels</b><br />
-        <a href="https://singular-society.com/products/hand-towel-50x70?variant=32887944118295">singular society towels</a>
+        <a href="https://singular-society.com/products/hand-towel-50x70?variant=32887944118295">singular society
+          towels</a>
         <br />
+      </p>
+
+      <h2>food</h2>
+      <h5>—stockholm</h5>
+      <p>
+        <b>burgers</b><br />
+        <a href="https://goo.gl/maps/CFbVxNzu6EDpCRGw6?coh=178571&entry=tt">funky chicken foodtruck</a>
+        <br />
+        <a href="https://goo.gl/maps/BySn15MD1c4oJJj89?coh=178571&entry=tt">bap</a>
+      </p>
+      <p>
+        <b>pizza</b><br />
+        <a href="https://goo.gl/maps/Ww1CRRkPo86nAfAVA?coh=178571&entry=tt">800 grader</a>
+      </p>
+      <p>
+        <b>gelato</b><br />
+        <a href="https://goo.gl/maps/CiowQBkn7HR3AGX2A?coh=178571&entry=tt">snö</a>
+        <br />
+        <a href="https://goo.gl/maps/KoWLS8ZE37V7ASrMA?coh=178571&entry=tt">ett bageri</a>
+      </p>
+      <p>
+        <b>fine dining</b><br />
+        <a href="https://goo.gl/maps/c5ir4RX4TvDBduwA8?coh=178571&entry=tt">frantzén</a>
       </p>
     </div>
   </div>
