--- a/index.html
+++ b/index.html
@@ -101,6 +101,13 @@
         <br />
       </p>
       <p>
+        <b>chef's knife</b><br />
+        <a
+          href="https://www.cleancut.se/butik/knivserier/takamura-2-serier/takamura-r2/kockkniv2015-04-21-15-16-31-detail">takamura
+          r2</a>
+        <br />
+      </p>
+      <p>
         <b>lip balm</b><br />
         <a href="https://www.paulaschoice.com/lip-and-body-treatment-balm/550.html">paula's choice lip and body
           treatment balm</a>
