--- a/index.html
+++ b/index.html
@@ -142,6 +142,10 @@
         <b>fine dining</b><br />
         <a href="https://goo.gl/maps/c5ir4RX4TvDBduwA8?coh=178571&entry=tt">frantzén</a>
       </p>
+      <p>
+        <b>swedish</b><br />
+        <a href="https://goo.gl/maps/At5DqXKJUXnMJyz3A">operakällaren backfickan</a>
+      </p>
     </div>
   </div>
 </body>
