Singular society boxer briefs

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       <p>
         <b>underwear</b><br />
         <a href="https://cdlp.com/products/3-boxer-brief-black?variant=32611985784903">cdlp</a>
+        <a href="https://singular-society.com/products/mens-boxer-brief-2-p?variant=46370276311377">singular society boxer brief</a>
       </p>
       <p>
         <b>coffee kettle</b><br />
@@ -50,12 +51,10 @@
       <p>
         <b>mechanical keyboard</b><br />
         <a href="https://www.keychron.com/products/keychron-q2-qmk-custom-mechanical-keyboard">keychron q2/q3/q5</a>
-        <br />
       </p>
       <p>
         <b>air purifier</b><br />
         <a href="https://www.mi.com/global/product/xiaomi-smart-air-purifier-4-pro/">xiaomi air purifier 4 pro</a>
-        <br />
       </p>
       <p>
         <b>display</b><br />
@@ -65,19 +64,16 @@
       <p>
         <b>laptop</b><br />
         <a href="https://www.apple.com/macbook-pro-14-and-16/">macbook pro</a>
-        <br />
       </p>
       <p>
         <b>phone</b><br />
         <a href="https://store.google.com/us/product/pixel_7_pro?hl=en-US">google pixel 7 pro</a>
         <br />
         <a href="https://www.apple.com/iphone-14-pro/">iphone 14 pro (max)</a>
-        <br />
       </p>
       <p>
         <b>phone screen protector</b><br />
         <a href="https://www.whitestonedome.com/">whitestone dome</a>
-        <br />
       </p>
       <p>
         <b>face moisturizer</b><br />
@@ -86,38 +82,32 @@
         <br />
         <a href="https://www.cerave.com/skincare/moisturizers/pm-facial-moisturizing-lotion">cerave facial moisturizing
           lotion pm</a>
-        <br />
       </p>
       <p>
         <b>cast iron pot</b><br />
         <a
           href="https://www.lecreuset.se/sv_SE/p/rund-gryta-classic-gjutjarn/CI5001.html?dwvar_CI5001_color=ocean&dwvar_CI5001_size=26cm-l5-3">le
           creuset signature 5.3l</a>
-        <br />
       </p>
       <p>
         <b>meat thermometer</b><br />
         <a href="https://www.thermoworks.com/thermapen-one/">thermapen one</a>
-        <br />
       </p>
       <p>
         <b>chef's knife</b><br />
         <a
           href="https://www.cleancut.se/butik/knivserier/takamura-2-serier/takamura-r2/kockkniv2015-04-21-15-16-31-detail">takamura
           r2</a>
-        <br />
       </p>
       <p>
         <b>lip balm</b><br />
         <a href="https://www.paulaschoice.com/lip-and-body-treatment-balm/550.html">paula's choice lip and body
           treatment balm</a>
-        <br />
       </p>
       <p>
         <b>towels</b><br />
         <a href="https://singular-society.com/products/hand-towel-50x70?variant=32887944118295">singular society
           towels</a>
-        <br />
       </p>
 
       <h2>food</h2>
