--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </p>
       <p>
         <b>coffee grinder</b><br />
-        <a href="https://fellowproducts.com/products/ode-brew-grinder">fellow ode</a>
+        <a href="https://fellowproducts.com/products/ode-brew-grinder-gen-2">fellow ode gen 2</a>
         <br />
         <a href="https://www.wilfa.se/product/utgagna-produkter-sv/kok-ut/uniform-kaffekvarn/">wilfa uniform</a>
         <br />
