--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
       </p>
       <p>
         <b>phone</b><br />
-        <a href="https://store.google.com/us/product/pixel_7_pro?hl=en-US">google pixel 7 pro</a>
+        <a href="https://www.samsung.com/se/smartphones/galaxy-s24-ultra/">samsung s24 ultra</a>
         <br />
-        <a href="https://www.apple.com/iphone-14-pro/">iphone 14 pro (max)</a>
+        <a href="https://www.apple.com/iphone-15-pro/">iphone 15 pro (max)</a>
       </p>
       <p>
         <b>phone screen protector</b><br />
@@ -121,7 +121,7 @@
       </p>
       <p>
         <b>pizza</b><br />
-        <a href="https://goo.gl/maps/Ww1CRRkPo86nAfAVA?coh=178571&entry=tt">800 grader</a>
+        <a href="https://www.baravedugnspizza.se/">bara vedugnspizza</a>
       </p>
       <p>
         <b>gelato</b><br />
@@ -135,7 +135,13 @@
       </p>
       <p>
         <b>swedish</b><br />
-        <a href="https://goo.gl/maps/At5DqXKJUXnMJyz3A">operakällaren backfickan</a>
+        <a href="https://goo.gl/maps/At5DqXKJUXnMJyz3A">operabaren backfickan</a>
+      </p>
+      <p>
+        <b>cinnamon buns</b><br />
+        <a href="https://maps.app.goo.gl/6bf2AGALYbQSgBCw7">stora bageriet</a>
+        <b>cardamon buns</b><br />
+        <a href="https://maps.app.goo.gl/VrEHTRJ2TNqJv5WR9">lillebrors bageri</a>
       </p>
     </div>
   </div>
