--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
       </p>
       <p>
         <b>swedish</b><br />
-        <a href="https://goo.gl/maps/At5DqXKJUXnMJyz3A">operabaren backfickan</a>
+        <a href="https://maps.app.goo.gl/F9B7MSu94sZkd8MS7">operabaren backfickan</a>
       </p>
       <p>
         <b>cinnamon buns</b><br />
