--- a/index.html
+++ b/index.html
@@ -19,128 +19,121 @@
 <body>
   <div class="container">
     <div class="story-container">
-      <div class="page-title">recommendations<br /><br /></div>
-      <p>
-        <b>underwear</b><br />
+      <div class="page-title">recommendations</div>
+      <p class="recommendation-item-list">
+        <b>underwear</b>
         <a href="https://cdlp.com/products/3-boxer-brief-black?variant=32611985784903">cdlp</a>
-        <br />
-        <a href="https://singular-society.com/products/mens-boxer-brief-2-p?variant=46370276311377">singular society boxer brief</a>
+        <a href="https://singular-society.com/products/mens-boxer-brief-2-p?variant=46370276311377">singular society
+          boxer brief</a>
       </p>
-      <p>
-        <b>coffee kettle</b><br />
+      <p class="recommendation-item-list">
+        <b>coffee kettle</b>
         <a href="https://fellowproducts.com/products/stagg?variant=18635548721267">fellow stagg ekg</a>
       </p>
-      <p>
-        <b>coffee scale</b><br />
+      <p class="recommendation-item-list">
+        <b>coffee scale</b>
         <a href="https://acaia.co/products/pearl-model-s">acaia pearl s</a>
       </p>
-      <p>
-        <b>coffee grinder</b><br />
+      <p class="recommendation-item-list">
+        <b>coffee grinder</b>
         <a href="https://fellowproducts.com/products/ode-brew-grinder-gen-2">fellow ode gen 2</a>
-        <br />
         <a href="https://www.wilfa.se/product/utgagna-produkter-sv/kok-ut/uniform-kaffekvarn/">wilfa uniform</a>
-        <br />
         <a href="https://www.comandantegrinder.com/index.html">comandante c40</a>
-        <br />
       </p>
-      <p>
-        <b>true wireless earbuds</b><br />
+      <p class="recommendation-item-list">
+        <b>true wireless earbuds</b>
         <a href="https://www.samsung.com/global/galaxy/galaxy-buds2-pro/">samsung buds 2 pro</a>
-        <br />
         <a href="https://www.apple.com/se/airpods-pro/">apple airpods pro</a>
       </p>
-      <p>
-        <b>mechanical keyboard</b><br />
+      <p class="recommendation-item-list">
+        <b>mechanical keyboard</b>
         <a href="https://www.keychron.com/products/keychron-q2-qmk-custom-mechanical-keyboard">keychron q2/q3/q5</a>
       </p>
-      <p>
-        <b>air purifier</b><br />
+      <p class="recommendation-item-list">
+        <b>air purifier</b>
         <a href="https://www.mi.com/global/product/xiaomi-smart-air-purifier-4-pro/">xiaomi air purifier 4 pro</a>
       </p>
-      <p>
-        <b>display</b><br />
+      <p class="recommendation-item-list">
+        <b>display</b>
         <a href="https://www.apple.com/studio-display/">apple studio display</a>
-        <br />
       </p>
-      <p>
-        <b>laptop</b><br />
+      <p class="recommendation-item-list">
+        <b>laptop</b>
         <a href="https://www.apple.com/macbook-pro-14-and-16/">macbook pro</a>
       </p>
-      <p>
-        <b>phone</b><br />
+      <p class="recommendation-item-list">
+        <b>phone</b>
         <a href="https://www.samsung.com/se/smartphones/galaxy-s24-ultra/">samsung s24 ultra</a>
-        <br />
         <a href="https://www.apple.com/iphone-15-pro/">iphone 15 pro (max)</a>
       </p>
-      <p>
-        <b>phone screen protector</b><br />
+      <p class="recommendation-item-list">
+        <b>phone screen protector</b>
         <a href="https://www.whitestonedome.com/">whitestone dome</a>
       </p>
-      <p>
-        <b>face moisturizer</b><br />
+      <p class="recommendation-item-list">
+        <b>face moisturizer</b>
         <a href="https://www.cerave.com/skincare/moisturizers/am-facial-moisturizing-lotion-with-sunscreen">cerave
           facial moisturizing lotion am</a>
-        <br />
         <a href="https://www.cerave.com/skincare/moisturizers/pm-facial-moisturizing-lotion">cerave facial moisturizing
           lotion pm</a>
       </p>
-      <p>
-        <b>cast iron pot</b><br />
+      <p class="recommendation-item-list">
+        <b>cast iron pot</b>
         <a
           href="https://www.lecreuset.se/sv_SE/p/rund-gryta-classic-gjutjarn/CI5001.html?dwvar_CI5001_color=ocean&dwvar_CI5001_size=26cm-l5-3">le
           creuset signature 5.3l</a>
       </p>
-      <p>
-        <b>meat thermometer</b><br />
+      <p class="recommendation-item-list">
+        <b>meat thermometer</b>
         <a href="https://www.thermoworks.com/thermapen-one/">thermapen one</a>
       </p>
-      <p>
-        <b>chef's knife</b><br />
+      <p class="recommendation-item-list">
+        <b>chef's knife</b>
         <a
           href="https://www.cleancut.se/butik/knivserier/takamura-2-serier/takamura-r2/kockkniv2015-04-21-15-16-31-detail">takamura
           r2</a>
       </p>
-      <p>
-        <b>lip balm</b><br />
+      <p class="recommendation-item-list">
+        <b>lip balm</b>
         <a href="https://www.paulaschoice.com/lip-and-body-treatment-balm/550.html">paula's choice lip and body
           treatment balm</a>
       </p>
-      <p>
-        <b>towels</b><br />
+      <p class="recommendation-item-list">
+        <b>towels</b>
         <a href="https://singular-society.com/products/hand-towel-50x70?variant=32887944118295">singular society
           towels</a>
       </p>
 
       <h2>food</h2>
       <h5>—stockholm</h5>
-      <p>
-        <b>burgers</b><br />
+      <p class="recommendation-item-list">
+        <b>burgers</b>
         <a href="https://goo.gl/maps/CFbVxNzu6EDpCRGw6?coh=178571&entry=tt">funky chicken foodtruck</a>
-        <br />
         <a href="https://goo.gl/maps/BySn15MD1c4oJJj89?coh=178571&entry=tt">bap</a>
       </p>
-      <p>
-        <b>pizza</b><br />
+      <p class="recommendation-item-list">
+        <b>pizza</b>
         <a href="https://www.baravedugnspizza.se/">bara vedugnspizza</a>
       </p>
-      <p>
-        <b>gelato</b><br />
+      <p class="recommendation-item-list">
+        <b>gelato</b>
         <a href="https://goo.gl/maps/CiowQBkn7HR3AGX2A?coh=178571&entry=tt">snö</a>
-        <br />
         <a href="https://goo.gl/maps/KoWLS8ZE37V7ASrMA?coh=178571&entry=tt">ett bageri</a>
       </p>
-      <p>
-        <b>fine dining</b><br />
+      <p class="recommendation-item-list">
+        <b>fine dining</b>
         <a href="https://goo.gl/maps/c5ir4RX4TvDBduwA8?coh=178571&entry=tt">frantzén</a>
       </p>
-      <p>
-        <b>swedish</b><br />
+      <p class="recommendation-item-list">
+        <b>swedish</b>
         <a href="https://maps.app.goo.gl/F9B7MSu94sZkd8MS7">operabaren backfickan</a>
       </p>
-      <p>
-        <b>cinnamon buns</b><br />
+      <p class="recommendation-item-list">
+        <b>cinnamon buns</b>
         <a href="https://maps.app.goo.gl/6bf2AGALYbQSgBCw7">stora bageriet</a>
-        <b>cardamon buns</b><br />
+      </p>
+      <p class="recommendation-item-list">
+        <b>cardamon buns</b>
         <a href="https://maps.app.goo.gl/VrEHTRJ2TNqJv5WR9">lillebrors bageri</a>
       </p>
     </div>
