try breakout markdown

--- a/index.html
+++ b/index.html
@@ -18,123 +18,10 @@
 
 <body>
   <div class="container">
-    <div class="story-container">
-      <div class="page-title">recommendations</div>
-      <p class="recommendation-item-list">
-        <b>underwear</b>
-        <a href="https://cdlp.com/products/3-boxer-brief-black?variant=32611985784903" target="_blank" rel="noopener noreferrer">cdlp</a>
-        <a href="https://singular-society.com/products/mens-boxer-brief-2-p?variant=46370276311377" target="_blank" rel="noopener noreferrer">singular society
-          boxer brief</a>
-      </p>
-      <p class="recommendation-item-list">
-        <b>coffee kettle</b>
-        <a href="https://fellowproducts.com/products/stagg?variant=18635548721267" target="_blank" rel="noopener noreferrer">fellow stagg ekg</a>
-      </p>
-      <p class="recommendation-item-list">
-        <b>coffee scale</b>
-        <a href="https://acaia.co/products/pearl-model-s" target="_blank" rel="noopener noreferrer">acaia pearl s</a>
-      </p>
-      <p class="recommendation-item-list">
-        <b>coffee grinder</b>
-        <a href="https://fellowproducts.com/products/ode-brew-grinder-gen-2" target="_blank" rel="noopener noreferrer">fellow ode gen 2</a>
-        <a href="https://www.wilfa.se/product/utgagna-produkter-sv/kok-ut/uniform-kaffekvarn" target="_blank" rel="noopener noreferrer">wilfa uniform</a>
-        <a href="https://www.comandantegrinder.com/index.html" target="_blank" rel="noopener noreferrer">comandante c40</a>
-      </p>
-      <p class="recommendation-item-list">
-        <b>true wireless earbuds</b>
-        <a href="https://www.samsung.com/global/galaxy/galaxy-buds2-pro" target="_blank" rel="noopener noreferrer">samsung buds 2 pro</a>
-        <a href="https://www.apple.com/se/airpods-pro" target="_blank" rel="noopener noreferrer">apple airpods pro</a>
-      </p>
-      <p class="recommendation-item-list">
-        <b>mechanical keyboard</b>
-        <a href="https://www.keychron.com/products/keychron-q2-qmk-custom-mechanical-keyboard" target="_blank" rel="noopener noreferrer">keychron q2/q3/q5</a>
-      </p>
-      <p class="recommendation-item-list">
-        <b>air purifier</b>
-        <a href="https://www.mi.com/global/product/xiaomi-smart-air-purifier-4-pro" target="_blank" rel="noopener noreferrer">xiaomi air purifier 4 pro</a>
-      </p>
-      <p class="recommendation-item-list">
-        <b>display</b>
-        <a href="https://www.apple.com/studio-display" target="_blank" rel="noopener noreferrer">apple studio display</a>
-      </p>
-      <p class="recommendation-item-list">
-        <b>laptop</b>
-        <a href="https://www.apple.com/macbook-pro-14-and-16" target="_blank" rel="noopener noreferrer">macbook pro</a>
-      </p>
-      <p class="recommendation-item-list">
-        <b>phone</b>
-        <a href="https://www.samsung.com/se/smartphones/galaxy-s24-ultra" target="_blank" rel="noopener noreferrer">samsung s24 ultra</a>
-        <a href="https://www.apple.com/iphone-15-pro" target="_blank" rel="noopener noreferrer">iphone 15 pro (max)</a>
-      </p>
-      <p class="recommendation-item-list">
-        <b>phone screen protector</b>
-        <a href="https://www.whitestonedome.com" target="_blank" rel="noopener noreferrer">whitestone dome</a>
-      </p>
-      <p class="recommendation-item-list">
-        <b>face moisturizer</b>
-        <a href="https://www.cerave.com/skincare/moisturizers/am-facial-moisturizing-lotion-with-sunscreen" target="_blank" rel="noopener noreferrer">cerave
-          facial moisturizing lotion am</a>
-        <a href="https://www.cerave.com/skincare/moisturizers/pm-facial-moisturizing-lotion" target="_blank" rel="noopener noreferrer">cerave facial moisturizing
-          lotion pm</a>
-      </p>
-      <p class="recommendation-item-list">
-        <b>cast iron pot</b>
-        <a href="https://www.lecreuset.se/sv_SE/p/rund-gryta-classic-gjutjarn/CI5001.html?dwvar_CI5001_color=ocean&dwvar_CI5001_size=26cm-l5-3" target="_blank" rel="noopener noreferrer">le
-          creuset signature 5.3l</a>
-      </p>
-      <p class="recommendation-item-list">
-        <b>meat thermometer</b>
-        <a href="https://www.thermoworks.com/thermapen-one" target="_blank" rel="noopener noreferrer">thermapen one</a>
-      </p>
-      <p class="recommendation-item-list">
-        <b>chef's knife</b>
-        <a href="https://www.cleancut.se/butik/knivserier/takamura-2-serier/takamura-r2/kockkniv2015-04-21-15-16-31-detail" target="_blank" rel="noopener noreferrer">takamura
-          r2</a>
-      </p>
-      <p class="recommendation-item-list">
-        <b>lip balm</b>
-        <a href="https://www.paulaschoice.com/lip-and-body-treatment-balm/550.html" target="_blank" rel="noopener noreferrer">paula's choice lip and body
-          treatment balm</a>
-      </p>
-      <p class="recommendation-item-list">
-        <b>towels</b>
-        <a href="https://singular-society.com/products/hand-towel-50x70?variant=32887944118295" target="_blank" rel="noopener noreferrer">singular society
-          towels</a>
-      </p>
-
-      <h2>food</h2>
-      <h5>—stockholm</h5>
-      <p class="recommendation-item-list">
-        <b>burgers</b>
-        <a href="https://goo.gl/maps/CFbVxNzu6EDpCRGw6?coh=178571&entry=tt" target="_blank" rel="noopener noreferrer">funky chicken foodtruck</a>
-      </p>
-      <p class="recommendation-item-list">
-        <b>pizza</b>
-        <a href="https://www.baravedugnspizza.se" target="_blank" rel="noopener noreferrer">bara vedugnspizza</a>
-      </p>
-      <p class="recommendation-item-list">
-        <b>gelato</b>
-        <a href="https://goo.gl/maps/CiowQBkn7HR3AGX2A?coh=178571&entry=tt" target="_blank" rel="noopener noreferrer">snö</a>
-        <a href="https://goo.gl/maps/KoWLS8ZE37V7ASrMA?coh=178571&entry=tt" target="_blank" rel="noopener noreferrer">ett bageri</a>
-      </p>
-      <p class="recommendation-item-list">
-        <b>fine dining</b>
-        <a href="https://goo.gl/maps/c5ir4RX4TvDBduwA8?coh=178571&entry=tt" target="_blank" rel="noopener noreferrer">frantzén</a>
-      </p>
-      <p class="recommendation-item-list">
-        <b>swedish</b>
-        <a href="https://maps.app.goo.gl/F9B7MSu94sZkd8MS7" target="_blank" rel="noopener noreferrer">operabaren backfickan</a>
-      </p>
-      <p class="recommendation-item-list">
-        <b>cinnamon buns</b>
-        <a href="https://maps.app.goo.gl/6bf2AGALYbQSgBCw7" target="_blank" rel="noopener noreferrer">stora bageriet</a>
-      </p>
-      <p class="recommendation-item-list">
-        <b>cardamon buns</b>
-        <a href="https://maps.app.goo.gl/VrEHTRJ2TNqJv5WR9" target="_blank" rel="noopener noreferrer">lillebrors bageri</a>
-      </p>
-    </div>
+    <!-- Content will be loaded from markdown -->
   </div>
+  
+  <script src="js/markdown-parser.js"></script>
 </body>
 
 </html>
