use markdown rednerer

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
   <div class="container">
-    <!-- Content will be loaded from markdown -->
+    <!-- Content will be dynamically loaded from recommendations.md -->
   </div>
   
   <script src="js/markdown-parser.js"></script>
